# LogicLanguage

./: .gitignore  CMakeLists.txt  CMakePresets.json  CRASH  PROXIMOS_PASOS.md  README.md  env_dump.bat  intel_env.tmp
examples/: induction_proof.cpp  socrates_proof.cpp
include/logic_language/: logic_language.hpp
include/theorems/: lean_bridge.hpp
include/theorems/peano/: addition.hpp  axioms.hpp  basic_theorems.hpp  max_min.hpp  order.hpp  strict_order.hpp
include/theorems/zfc/: axioms.hpp  basic_theorems.hpp
scripts/: PLAN.md  intel_launch.sh  run_validation.py  run_validation.sh  setvars_intel.py  setvarsall_intel.py
src/: main.cpp
tests/: comprehensive_tests.cpp  ideas.md  initial_tests.cpp  natural_deduction_tests.cpp
